fixed up archives , subtitles alignment, also fixed up form validations

--- a/css/scss/_layout.scss
+++ b/css/scss/_layout.scss
@@ -818,14 +818,6 @@ body {
 				margin-top: 20px;
 			}		
 
-			.centerer {
-				width: 70%;
-
-				@include device-width(8) {
-					width: 100%;
-				}
-			}	
-
 			.logo {
 				margin-bottom: 10px;
 			}
@@ -1007,21 +999,27 @@ body {
 			width: 100%;
 		}
 
-		.work {
+		.inner {
 			display: table;
 			width: 100%;
-			height: 130px;
+			height: 100px;
 		}	
 
 		.info {
 			display: table-cell;
 			vertical-align: middle;
-			width: 100%;			
+			width: 100%;	
 
-			.title {
-				padding: 0 10%;
-			}
+			.logo {
+				img {
+					max-height: 100%;
+				}
+			}		
 		}	
+
+		.title {
+			padding: 0 10%;
+		}		
 
 		.image {
 			position: absolute;
